--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,21 +4,21 @@
 <div class="ui grid">
   <div class="four wide column"></div>
   <div class="eight wide column">
-    <form class="ui form segment" method="post" enctype="multipart/form-data">
+    <form class="ui form segment" method="post" enctype="multipart/form-data"> <!-- form表單要添加enctype="multipart/form-data"屬性才能上傳文件。 -->
       <div class="field required">
-        <label>用户名</label>
-        <input placeholder="用户名" type="text" name="name">
+        <label>用戶名</label>
+        <input placeholder="用戶名" type="text" name="name">
       </div>
       <div class="field required">
-        <label>密码</label>
-        <input placeholder="密码" type="password" name="password">
+        <label>密碼</label>
+        <input placeholder="密碼" type="password" name="password">
       </div>
       <div class="field required">
-        <label>重复密码</label>
-        <input placeholder="重复密码" type="password" name="repassword">
+        <label>重複密碼</label>
+        <input placeholder="重複密碼" type="password" name="repassword">
       </div>
       <div class="field required">
-        <label>性别</label>
+        <label>性別</label>
         <select class="ui compact selection dropdown" name="gender">
           <option value="m">男</option>
           <option value="f">女</option>
@@ -26,14 +26,14 @@
         </select>
       </div>
       <div class="field required">
-        <label>头像</label>
+        <label>大頭貼</label>
         <input type="file" name="avatar">
       </div>
       <div class="field required">
-        <label>个人简介</label>
+        <label>個人簡介</label>
         <textarea name="bio" rows="5"></textarea>
       </div>
-      <input type="submit" class="ui button fluid" value="注册">
+      <input type="submit" class="ui button fluid" value="註冊">
     </form>
   </div>
 </div>
